--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11",
+    "tailwind": "^4.0.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
